cmake_minimum_required(VERSION 3.14)
project(mousereplayproj)
add_library(mousereplay mousereplay.cpp)
set_target_properties(mousereplay PROPERTIES CXX_STANDARD 20)
add_executable(example example.cpp)
set_target_properties(example PROPERTIES CXX_STANDARD 20)
target_link_libraries(example PUBLIC mousereplay)